# Multifrac

./: .bzrignore  .gitignore  ColorChooser.java  ColorStep.java  ColorizerPanel.java  DisplayPanel.java  FractalParameters.java  FractalRenderer.java  Multifrac.java  ParameterStack.java  README  README.md  RenderDialog.java  RenderPanel.java  SConstruct  SingleColorPanel.java  SpinnerCSModel.java  build.xml  run-node.sh  run.sh
cnode/: Makefile.in  config.h.in  configure  configure.ac
cnode/src/: Makefile.am  Makefile.in  node.c  renderthread.c  renderthread.h  sockfuncs.c  sockfuncs.h
src/: ColorChooser.java  ColorStep.java  ColorizerPanel.java  CompHelp.java  DisplayPanel.java  FractalParameters.java  FractalRenderer.java  ImageOperations.java  Multifrac.java  ParameterStack.java  RenderDialog.java  Selector.java  SimpleGridBag.java  SingleColorPanel.java  SpinnerCSModel.java  TIFFWriter.java
src/C/: node.c  renderthread.c  renderthread.h  sockfuncs.c  sockfuncs.h
src/multifrac/: ColorChooser.java  ColorStep.java  ColorizerPanel.java  CompHelp.java  DisplayPanel.java  FractalParameters.java  FractalRenderer.java  ImageOperations.java  Multifrac.java  ParameterStack.java  RenderDialog.java  RenderNetBar.java  RenderNetConsole.java  RenderNetDialog.java  Selector.java  SimpleGridBag.java  SingleColorPanel.java  SpinnerCSModel.java  TIFFWriter.java
src/multifrac/net/: NetBarDriver.java  NetClient.java  NetConsole.java  NetRenderSettings.java  Node.java
src/multifrac/net/test/: TestClient.java  TestMultiClient.java
